[tool.poetry]
name = "monash_eng_bot"
version = "0.1.0"
description = "A bot for the Monash Engineering Discord server"
authors = ["Jack Bradley <jack92829@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
